Adds new splash and app icon

--- a/app.json
+++ b/app.json
@@ -11,8 +11,8 @@
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "resizeMode": "cover",
+      "backgroundColor": "#2B6AB3"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
